# spectrum

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  TODO  abstractpurplerequest.h  accountcollector.cpp  accountcollector.h  adhocadmin.cpp  adhocadmin.h  adhoccommandhandler.h  adhochandler.cpp  adhochandler.h  adhocrepeater.cpp  adhocrepeater.h  adhocsettings.cpp  adhocsettings.h  archlinux-installation.markdown  autoconnectloop.cpp  autoconnectloop.h  buddies-forwarding-method.markdown  building-from-source-code-windows.markdown  building-from-source-code.markdown  building.markdown  caps.cpp  caps.h  cmake_install.cmake  commands.cpp  commands.h  configure.in  custom.css  dataforms.cpp  dataforms.h  debian-ubuntu-installation.markdown  discoinfohandler.cpp  discoinfohandler.h  filetransfermanager.cpp  filetransfermanager.h  filetransferrepeater.cpp  (+58 more)
_layouts/: default.html
cmake_modules/: cryptoppConfig.cmake  eventConfig.cmake  glibConfig.cmake  glooxConfig.cmake  libdbiConfig.cmake  libpocoConfig.cmake  magickConfig.cmake  mysqlConfig.cmake  purpleConfig.cmake
initscripts/archlinux/: spectrum-conf.d  spectrum-rc.d
initscripts/archlinux/conf.d/: spectrum
initscripts/archlinux/rc.d/: spectrum
initscripts/debian/: spectrum
initscripts/fedora/: spectrum
initscripts/slackware/: rc.spectrum
initscripts/ubuntu/: default  spectrum
locales/: cs.po
man/: spectrum.cfg.5  spectrumctl.8  spectrumctl.8.head  spectrumctl.8.tail
munin/: spectrum_
nsis/: editconfig.bat  runallinstances.bat  showconfigs.bat  spectrum.bat  spectrum.nsi
patches/: 01-gloox-filetransfer-component.diff  1-gloox-send-file-patch.diff  1-purple-patch.diff  2-gloox-receive-file-patch.diff  2-purple-abstract-blist-save.diff  gloox-1.0.diff
po/: README.transifex  cs.po  de.po  fr.po  pl.po  ru.po
protocols/: CMakeLists.txt  abstractprotocol.h  aim.cpp  aim.h  facebook.cpp  facebook.h  gg.cpp  gg.h  icq.cpp  icq.h  irc.cpp  irc.h  msn.cpp  msn.h  myspace.cpp  myspace.h  qq.cpp  qq.h  simple.cpp  simple.h  xmpp.cpp  xmpp.h  yahoo.cpp  yahoo.h
protocols/dict/: config.h  dict.c  dict.h
schemas/: mysql_schema.sql  sqlite_schema.sql
spectrumctl/: Makefile  make_man_page.py  make_redmine_doc.py  setup.py  socket_test.py  spectrum-backtrace.py  spectrumctl.py
spectrumctl/spectrum/: ExistsError.py  __init__.py  actions.py  completer.py  config_interface.py  dochelp.py  env.py  spectrum.py  spectrum_group.py  spectrumconfigparser.py
spectrumctl/spectrum/doc/: __init__.py  doc.py  epydoc.py  interactive.py  man.py  redmine.py
src/: Makefile.am  abstractbackend.h  abstractconfiginterfacehandler.h  abstractconversation.cpp  abstractconversation.h  abstractpurplerequest.h  abstractspectrumbuddy.cpp  abstractspectrumbuddy.h  abstractuser.h  accountcollector.cpp  accountcollector.h  adhocadmin.h  adhochandler.cpp  adhochandler.h  adhocsettings.cpp  adhocsettings.h  autoconnectloop.cpp  autoconnectloop.h  capabilityhandler.cpp  capabilityhandler.h  capabilitymanager.cpp  capabilitymanager.h  caps.cpp  caps.h  commands.cpp  commands.h  configfile.cpp  configfile.h  configinterface.cpp  configinterface.h  crypto.cpp  crypto.h  discoinfohandler.cpp  discoinfohandler.h  dnsresolver.cpp  dnsresolver.h  filetransfermanager.cpp  filetransfermanager.h  filetransferrepeater.cpp  filetransferrepeater.h  (+73 more)
src/adhoc/: adhocadmin.cpp  adhocadmin.h  adhoccommandhandler.h  adhochandler.cpp  adhochandler.h  adhocrepeater.cpp  adhocrepeater.h  adhocsettings.cpp  adhocsettings.h  adhoctag.cpp  adhoctag.h  dataforms.cpp  dataforms.h
src/protocols/: abstractprotocol.h  aim.cpp  aim.h  bonjour.cpp  bonjour.h  dict.cpp  dict.h  facebook.cpp  facebook.h  gg.cpp  gg.h  groupwise.cpp  groupwise.h  hon.cpp  hon.h  icq.cpp  icq.h  identica.cpp  identica.h  irc.cpp  irc.h  msn.cpp  msn.h  msn_pecan.cpp  msn_pecan.h  myspace.cpp  myspace.h  qq.cpp  qq.h  simple.cpp  simple.h  sipe.cpp  sipe.h  steam.cpp  steam.h  twitter.cpp  twitter.h  xfire.cpp  xfire.h  xmpp.cpp  (+3 more)
src/tests/: abstracttest.cpp  abstracttest.h  autoconnectlooptest.cpp  autoconnectlooptest.h  capabilityhandlertest.cpp  capabilityhandlertest.h  configfiletest.cpp  configfiletest.h  discoinfohandlertest.cpp  discoinfohandlertest.h  main.cpp  main.h  registerhandlertest.cpp  registerhandlertest.h  resourcemanagertest.cpp  resourcemanagertest.h  rostermanagertest.cpp  rostermanagertest.h  rosterstoragetest.cpp  rosterstoragetest.h  spectrumbuddytest.cpp  spectrumbuddytest.h  spectrumconversationtest.cpp  spectrumconversationtest.h  spectrummucconversationtest.cpp  spectrummucconversationtest.h  testingbackend.cpp  testingbackend.h  testingprotocol.cpp  testingprotocol.h  testinguser.cpp  testinguser.h  transporttest.cpp
tools/: py-transport2spectrum  pygg2spectrum  pyicqt2spectrum.py  pyyimt2spectrum
tools/migrate-db/: CMakeLists.txt  main.cpp  main.h
tools/migrate-db/cmake_modules/: libpocoConfig.cmake
tools/spectrumctl/: spectrumctl  spectrumctl.py
tools/stats/: stats.py
tools/tests/: spectrum.cfg  tests.py
