# Process this file with autoconf to produce a configure script.
AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE(spectrum, 0.0.1)
AM_CONFIG_HEADER(transport_config.h)

# Check for OS
case "$host_os" in
  *cygwin*)
     ;;
  *)
     AC_MSG_ERROR([

Don't use ./configure on Linux. Use CMake (cmake .) instead of ./configure

This configure script can be used only in Cygwin on Windows.
See http://spectrum.im/documentation/building/windows for more informations.
]);;
esac

	

# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S


dnl #######################################################################
dnl # Check for GLib 2.0 (required)
dnl #######################################################################
PKG_CHECK_MODULES(GLIB, [glib-2.0 >= 2.0.0 gobject-2.0 gmodule-2.0 gthread-2.0], , [
	AC_MSG_RESULT(no)
	AC_MSG_ERROR([

You must have the GLib 2.0 development headers installed to build.

If you have these installed already you may need to install pkg-config so
I can find them.
])])
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

GLIB_GENMARSHAL=`pkg-config --variable=glib_genmarshal glib-2.0`
AC_SUBST(GLIB_GENMARSHAL)

AC_ARG_ENABLE(missing-dependencies, [AC_HELP_STRING([--disable-missing-dependencies],
		[skip missing dependencies instead of aborting configure])],
	force_deps="$enableval", force_deps="yes")

AC_ARG_WITH(x, [],
	with_x="$withval", with_x="yes")
	
CPPFLAGS="$CPPFLAGS $GLIB_CFLAGS"


dnl #######################################################################
dnl # Check for libpurple (required)
dnl #######################################################################
PKG_CHECK_MODULES(LIBPURPLE, [purple >= 2.6.0], , [
	AC_MSG_RESULT(no)
	AC_MSG_ERROR([

You must have the libpurple 2.6.x development headers installed to build.

If you have these installed already you may need to install pkg-config so
I can find them.
])])
AC_SUBST(LIBRPUPLE_CFLAGS)
AC_SUBST(LIBPURPLE_LIBS)

CPPFLAGS="$CPPFLAGS $LIBPURPLE_CFLAGS"

dnl #######################################################################
dnl # Check for gloox (required)
dnl #######################################################################
PKG_CHECK_MODULES(GLOOX, [gloox >= 1.0], , [
	AC_MSG_RESULT(no)
	AC_MSG_ERROR([

You must have the Gloox 1.x development headers installed to build.

If you have these installed already you may need to install pkg-config so
I can find them.
])])
AC_SUBST(GLOOX_CFLAGS)
AC_SUBST(GLOOX_LIBS)

CPPFLAGS="$CPPFLAGS $GLOOX_CFLAGS"



LIBS="$LIBS $GLIB_LIBS $LIBPURPLE_LIBS $GLOOX_LIBS -lPocoFoundation -lPocoData -lPocoMySQL -lgettextpo"


AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

