# used by automake
bin_PROGRAMS = spectrum
spectrum_SOURCES = accountcollector.cpp \
	adhoc/adhocadmin.cpp \
	adhoc/adhochandler.cpp \
	adhoc/adhocrepeater.cpp \
	adhoc/adhocsettings.cpp \
	adhoc/dataforms.cpp \
	autoconnectloop.cpp \
	caps.cpp \
	commands.cpp \
	discoinfohandler.cpp \
	filetransfermanager.cpp \
	filetransferrepeater.cpp \
	gatewayhandler.cpp \
	geventloop.cpp \
	localization.cpp \
	main.cpp \
	muchandler.cpp \
	parser.cpp \
	registerhandler.cpp \
	searchhandler.cpp \
	searchrepeater.cpp \
	spectrum_util.cpp \
	statshandler.cpp \
	striphtmltags.cpp \
	sql.cpp \
	thread.cpp \
	user.cpp \
	usermanager.cpp \
	vcardhandler.cpp \
	protocols/aim.cpp \
	protocols/facebook.cpp \
	protocols/gg.cpp \
	protocols/icq.cpp \
	protocols/irc.cpp \
	protocols/msn.cpp \
	protocols/myspace.cpp \
	protocols/qq.cpp \
	protocols/simple.cpp \
	protocols/xmpp.cpp \
	protocols/yahoo.cpp
noinst_HEADERS = main.h
