# used by automake
bin_PROGRAMS = spectrum
spectrum_SOURCES = adhoc/adhocadmin.cpp \
	adhoc/adhochandler.cpp \
	adhoc/adhocrepeater.cpp \
	adhoc/adhocsettings.cpp \
	adhoc/dataforms.cpp \
	abstractconversation.cpp \
	abstractspectrumbuddy.cpp \
	accountcollector.cpp \
	autoconnectloop.cpp \
	capabilityhandler.cpp \
	capabilitymanager.cpp \
	commands.cpp \
	configfile.cpp \
	configinterface.cpp \
	configuration.cpp \
	discoinfohandler.cpp \
	filetransfermanager.cpp \
	filetransferrepeater.cpp \
	gatewayhandler.cpp \
	geventloop.cpp \
	localization.cpp \
	log.cpp \
	main.cpp \
	muchandler.cpp \
	parser.cpp \
	registerhandler.cpp \
	resourcemanager.cpp \
	rostermanager.cpp \
	rosterstorage.cpp \
	searchhandler.cpp \
	searchrepeater.cpp \
	spectrum_util.cpp \
	spectrumbuddy.cpp \
	spectrumconversation.cpp \
	spectrummessagehandler.cpp \
	spectrummucconversation.cpp \
	spectrumtimer.cpp \
	sql.cpp \
	statshandler.cpp \
	striphtmltags.cpp \
	thread.cpp \
	transport.cpp \
	user.cpp \
	usermanager.cpp \
	vcardhandler.cpp \
	protocols/aim.cpp \
	protocols/facebook.cpp \
	protocols/gg.cpp \
	protocols/icq.cpp \
	protocols/irc.cpp \
	protocols/msn.cpp \
	protocols/myspace.cpp \
	protocols/qq.cpp \
	protocols/simple.cpp \
	protocols/xmpp.cpp \
	protocols/yahoo.cpp
noinst_HEADERS = main.h
