# used by automake
bin_PROGRAMS = spectrum
spectrum_SOURCES = adhoc/adhocadmin.cpp \
	adhoc/adhochandler.cpp \
	adhoc/adhoctag.cpp \
	adhoc/adhocrepeater.cpp \
	adhoc/adhocsettings.cpp \
	adhoc/dataforms.cpp \
	abstractconversation.cpp \
	abstractspectrumbuddy.cpp \
	accountcollector.cpp \
	autoconnectloop.cpp \
	capabilityhandler.cpp \
	capabilitymanager.cpp \
	commands.cpp \
	configfile.cpp \
	configuration.cpp \
	filetransfermanager.cpp \
	filetransferrepeater.cpp \
	gatewayhandler.cpp \
	geventloop.cpp \
	localization.cpp \
	log.cpp \
	main.cpp \
	parser.cpp \
	registerhandler.cpp \
	resourcemanager.cpp \
	rostermanager.cpp \
	rosterstorage.cpp \
	searchhandler.cpp \
	searchrepeater.cpp \
	spectrum_util.cpp \
	spectrumbuddy.cpp \
	spectrumconversation.cpp \
	spectrummessagehandler.cpp \
	spectrummucconversation.cpp \
	spectrumnodehandler.cpp \
	spectrumtimer.cpp \
	sql.cpp \
	statshandler.cpp \
	thread.cpp \
	transport.cpp \
	user.cpp \
	usermanager.cpp \
	vcardhandler.cpp \
	protocols/aim.cpp \
	protocols/facebook.cpp \
	protocols/gg.cpp \
	protocols/icq.cpp \
	protocols/irc.cpp \
	protocols/msn.cpp \
	protocols/msn_pecan.cpp \
	protocols/myspace.cpp \
	protocols/qq.cpp \
	protocols/simple.cpp \
	protocols/twitter.cpp \
	protocols/xmpp.cpp \
	protocols/yahoo.cpp \
	protocols/sipe.cpp
noinst_HEADERS = main.h
